PieChart’s labels not visible fix

--- a/src/css/themes/infragistics/infragistics.theme.less
+++ b/src/css/themes/infragistics/infragistics.theme.less
@@ -41,7 +41,7 @@
 @chartGradualPalette10: #9A9A9A;
 @chartGradualPalette11: #C62828;
 //* igChart colors */
-@piechartContainer: #fff;
+
 @chartToolTipBgColor: rgba(255, 255, 255, 0.95);
 // Icon sprites
 @ui-icons-darker: #222222;
@@ -3008,9 +3008,7 @@ input.ui-igbutton {
     font-size: 12px;
     font-family: @fontfamily;
 }
-.ui-chart-piechart-container {
-	color: @piechartContainer;
-}
+
 
 .ui-chart-toolbar .ui-slider-handle {
     height: 18px;
